<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="28dp"
        android:textAlignment="textEnd"
        android:textColor="@color/onBackground"
        android:padding="16dp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:padding="16dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/buttonNone1"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonNone2"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonClear"
                android:text="C"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonBackspace"
                android:text="Bckp"
                style="@style/SecondaryButton" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonPower"
                android:text="x^2"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonLogarithm"
                android:text="ln(x)"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonModulo"
                android:text="%"
                style="@style/SecondaryButton" />

            <Button
                android:id="@+id/buttonDivide"
                android:text="/"
                style="@style/SecondaryButton" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:text="1"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button2"
                android:text="2"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button3"
                android:text="3"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonMultiply"
                android:text="*"
                style="@style/SecondaryButton" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button4"
                android:text="4"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button5"
                android:text="5"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button6"
                android:text="6"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonSubtract"
                android:text="-"
                style="@style/SecondaryButton" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button7"
                android:text="7"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button8"
                android:text="8"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button9"
                android:text="9"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonAdd"
                android:text="+"
                style="@style/SecondaryButton" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonChangeSign"
                android:text="+/-"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/button0"
                android:text="0"
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonDot"
                android:text="."
                style="@style/PrimaryButton" />

            <Button
                android:id="@+id/buttonCalculate"
                android:text="="
                style="@style/TertiaryButton" />

        </TableRow>

    </TableLayout>

</RelativeLayout>