...
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/product_quantity_button"
                android:minWidth="48dp"
                android:layout_marginRight="16dp"
                android:inputType="number"
                android:textAlignment="center"
                android:text="100" />

            <Button
                android:id="@+id/product_quantity_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
...
